--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,10 +44,12 @@
     "query-string": "^9.2.2",
     "react": "^19.1.0",
     "react-day-picker": "^9.8.0",
-    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.60.0",
+    "react-spinners": "^0.17.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.6.2",
+    "react-router-dom": "^7.9.4",
     "react-toastify": "^11.0.5",
     "recharts": "^3.1.0",
     "serve": "^10.0.2",
