--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,14 +42,15 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.525.0",
     "query-string": "^9.2.2",
+    "radix-ui": "^1.4.3",
     "react": "^19.1.0",
     "react-day-picker": "^9.8.0",
-    "react-icons": "^5.5.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.60.0",
-    "react-spinners": "^0.17.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
+    "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.1.0",
     "serve": "^10.0.2",
