--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.525.0",
     "query-string": "^9.2.2",
     "radix-ui": "^1.4.3",
