--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "googleapis": "^165.0.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
     "resend": "^6.4.2"
