doc: remove port 3000 in vite, add some dependencies in package.json

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,18 +36,19 @@
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-table": "^8.21.3",
     "antd": "^5.26.6",
-    "axios": "^1.10.0",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
+    "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.525.0",
     "query-string": "^9.2.2",
     "radix-ui": "^1.4.3",
     "react": "^19.1.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.1.1",
-    "react-hook-form": "^7.60.0",
+    "react-hook-form": "^7.67.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
@@ -58,7 +59,8 @@
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
