--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.67.0",
     "react-icons": "^5.5.0",
+    "react-loading-indicators": "^1.0.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
     "react-spinners": "^0.17.0",
