--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "query-string": "^9.2.2",
     "radix-ui": "^1.4.3",
     "react": "^19.1.0",
+    "react-datepicker": "^9.0.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.1.1",
     "react-google-recaptcha": "^3.1.0",
