--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.525.0",
     "query-string": "^9.2.2",
+    "quill": "^2.0.3",
     "radix-ui": "^1.4.3",
     "react": "^19.1.0",
     "react-datepicker": "^9.0.0",
